# deals-bot

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  alembic.ini  backlog-seed.md  docker-compose.yml  plan.md  preferences.yaml  pyproject.toml  stores.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_store_policy_fields.py  003_payload_storage.py  004_newsletter_confirmations.py  005_source_configs.py  006_email_signal_key.py  007_raw_signals_and_source_state.py  008_raw_signals.py
docs/: RUNBOOK.md
docs/swarm/: README.md  agentmail-ops.md  beads-seeding.md  ntm-kickoff.md
docs/tools/ntm/: README.md
scheduling/: README.md  com.dealintel.confirmations.plist  com.dealintel.daily.plist  com.dealintel.weekly.plist
src/dealintel/: __init__.py  cli.py  config.py  db.py  human_assist.py  models.py  prefs.py  seed.py
src/dealintel/browser/: __init__.py  runner.py
src/dealintel/clawdbot/: __init__.py  client.py
src/dealintel/digest/: __init__.py  render.py  report.py  select.py
src/dealintel/gmail/: __init__.py  auth.py  ingest.py  parse.py
src/dealintel/inbound/: __init__.py  ingest.py  parse_eml.py
src/dealintel/ingest/: __init__.py  dedupe.py  keys.py  router.py  signals.py
src/dealintel/jobs/: __init__.py  confirmations.py  daily.py  weekly.py
src/dealintel/llm/: __init__.py  extract.py  schemas.py
templates/: digest.html.j2  source_report.html.j2
tests/: __init__.py  conftest.py  test_digest.py  test_extraction_filter.py  test_extraction_golden.py  test_flight_region.py  test_inbound_ingest.py  test_integration.py  test_normalize.py  test_parse.py  test_parse_sale.py  test_web_controls.py  test_web_feed.py  test_web_ingest.py
tests/golden/: newsletter.json  nike_promo.json
(+35 files in other folders)
